@@ -6,3 +6,4 @@
 # and companies have contributed to the project since then:
 
 Owen Kellett (owen.kellett<at>gmail.com)
+Keith B Thompson (kbt1<at>charter.com)
