@@ -29,6 +29,7 @@ import com.sun.sgs.profile.ProfileCollector.ProfileLevel;
 import com.sun.sgs.profile.ProfileConsumer;
 import com.sun.sgs.profile.ProfileConsumer.ProfileDataType;
 import com.sun.sgs.profile.ProfileOperation;
+import com.sun.sgs.service.Node;
 
 /**
  * The Statistics MBean object for the client session service.
@@ -38,8 +39,13 @@ class ClientSessionServiceStats implements ClientSessionServiceMXBean {
     final ProfileOperation addSessionStatusListenerOp;
     final ProfileOperation getSessionProtocolOp;
     final ProfileOperation isRelocatingToLocalNodeOp;
+
+    private final ClientSessionServiceImpl service;
     
-    ClientSessionServiceStats(ProfileCollector collector) {
+    ClientSessionServiceStats(ProfileCollector collector,
+                              ClientSessionServiceImpl service)
+    {
+        this.service = service;
         ProfileConsumer consumer = 
             collector.getConsumer(ProfileCollectorImpl.CORE_CONSUMER_PREFIX + 
                                   "ClientSessionService");
@@ -71,5 +77,25 @@ class ClientSessionServiceStats implements ClientSessionServiceMXBean {
     public long getIsRelocatingToLocalNodeCalls() {
         return ((AggregateProfileOperation)
 		    isRelocatingToLocalNodeOp).getCount();
+    }
+
+    @Override
+    public Node.Health getSessionServiceHealth() {
+        return service.getHealth();
+    }
+
+    @Override
+    public int getNumSessions() {
+        return service.getNumSessions();
+    }
+
+    @Override
+    public int getLoginHighWater() {
+        return service.getLoginHighWater();
+    }
+
+    @Override
+    public void setLoginHighWater(int highWater) {
+        service.setLoginHighWater(highWater);
     }
 }
