@@ -238,7 +238,7 @@ public final class WatchdogServiceImpl
     final Thread renewThread = new RenewThread();
 
     /** The local nodeId. */
-    final long localNodeId;
+    private final long localNodeId;
 
     /** The interval for renewals with the watchdog server. */
     private final long renewInterval;
@@ -463,7 +463,7 @@ public final class WatchdogServiceImpl
         }
 
         // Report this component is healthy and ready for work
-        reportHealth(localNodeId, Health.GREEN, CLASSNAME);
+        reportHealth(Health.GREEN, CLASSNAME);
     }
 
     /** {@inheritDoc} */
@@ -587,6 +587,11 @@ public final class WatchdogServiceImpl
     }
 
     /** {@inheritDoc} */
+    public void reportHealth(Health nodeHealth, String component) {
+        reportHealth(localNodeId, nodeHealth, component);
+    }
+
+    /** {@inheritDoc} */
     public synchronized void reportHealth(long nodeId,
                                           Health nodeHealth,
                                           String component)
@@ -707,8 +712,9 @@ public final class WatchdogServiceImpl
 
         if (!health.isAlive()) {
             logger.log(Level.SEVERE,
-                       "Node:{0} forced to shutdown due to service failure",
-                       localNodeId);
+                       "Node:{0} forced to shutdown due to service failure " +
+                       "reported by {1}",
+                       localNodeId, component);
 
             shutdownController.shutdownNode(this);
         }
