@@ -198,6 +198,35 @@ public class TestClientSessionServiceImpl extends Assert {
     }
 
     @Test
+    public void testConstructorBadHighWater() throws Exception {
+	try {
+	    Properties props =
+		createProperties(
+		    StandardProperties.APP_NAME, APP_NAME,
+                    "com.sun.sgs.impl.service.session.login.high.water", "-1");
+	    new ClientSessionServiceImpl(
+		props, serverNode.getSystemRegistry(),
+		serverNode.getProxy());
+	    fail("Expected IllegalArgumentException");
+	} catch (IllegalArgumentException e) {
+	    System.err.println(e);
+	}
+        try {
+	    Properties props =
+		createProperties(
+		    StandardProperties.APP_NAME, APP_NAME,
+                    "com.sun.sgs.impl.service.session.login.high.water",
+                    String.valueOf((Integer.MAX_VALUE / 2) + 1));
+	    new ClientSessionServiceImpl(
+		props, serverNode.getSystemRegistry(),
+		serverNode.getProxy());
+	    fail("Expected IllegalArgumentException");
+	} catch (IllegalArgumentException e) {
+	    System.err.println(e);
+	}
+    }
+
+    @Test
     public void testConstructedVersion() throws Exception {
 	txnScheduler.runTask(new TestAbstractKernelRunnable() {
 		public void run() {
