@@ -43,6 +43,8 @@ import com.sun.sgs.impl.sharedutil.MessageBuffer;
 import com.sun.sgs.kernel.TransactionScheduler;
 import com.sun.sgs.protocol.simple.SimpleSgsProtocol;
 import com.sun.sgs.service.DataService;
+import com.sun.sgs.service.Node.Health;
+import com.sun.sgs.service.WatchdogService;
 import com.sun.sgs.test.util.AbstractDummyClient;
 import com.sun.sgs.test.util.ConfigurableNodePolicy;
 import com.sun.sgs.test.util.SgsTestNode;
@@ -451,6 +453,39 @@ public class TestClientSessionServiceImplv4 extends Assert {
 	    client1.checkDisconnectedCallback(false);
 	    assertTrue(client2.isConnected());
 	    
+	} finally {
+	    client1.disconnect();
+	    client2.disconnect();
+	}
+    }
+
+    @Test
+    @IntegrationTest
+    public void testHighWater() throws Exception {
+	// Set up ClientSessionService with login high water set
+	tearDown(false);
+	Properties props =
+	    SgsTestNode.getDefaultProperties(appName, null, DummyAppListener.class);
+	props.setProperty("com.sun.sgs.impl.service.session.login.high.water", "2");
+	setUp(props, false, appName, protocolVersion);
+
+	DummyClient client1 = createDummyClient("client1");
+	DummyClient client2 = createDummyClient("client2");
+	int port = serverNode.getAppPort();
+        WatchdogService watchdog = serverNode.getWatchdogService();
+	try {
+	    client1.connect(port).login();
+	    Thread.sleep(100);
+            assertTrue(client1.isConnected());
+            assertEquals(Health.GREEN, watchdog.getLocalNodeHealthNonTransactional());
+	    client2.connect(port).login();
+	    Thread.sleep(100);
+            assertTrue(client2.isConnected());
+            assertEquals(Health.YELLOW, watchdog.getLocalNodeHealthNonTransactional());
+            client1.disconnect();
+	    Thread.sleep(100);
+            assertFalse(client1.isConnected());
+            assertEquals(Health.GREEN, watchdog.getLocalNodeHealthNonTransactional());
 	} finally {
 	    client1.disconnect();
 	    client2.disconnect();
